--- a/HearthStoneTimer/AndroidManifest.xml
+++ b/HearthStoneTimer/AndroidManifest.xml
@@ -13,7 +13,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_hearthstone"
+        android:icon="@drawable/ic_hearthstonetimer"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <meta-data android:name="com.google.android.gms.version"
